--- a/.github/workflows/master_branch_actions.yml
+++ b/.github/workflows/master_branch_actions.yml
@@ -46,7 +46,7 @@ jobs:
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
-        run: dart test
+        run: flutter test
       
       - name: Bump version
         uses: chkfung/android-version-actions@v1.1
