--- a/.github/workflows/master_branch_actions.yml
+++ b/.github/workflows/master_branch_actions.yml
@@ -57,4 +57,4 @@ jobs:
           
       #Build APK 
       - name: Build APK
-        run: flutter build apk --flavor prod -t lib/main_prod.dart --build-number=$BITRISE_BUILD_NUMBER
+        run: flutter build apk --flavor prod -t lib/main_prod.dart
