--- a/.github/workflows/master_branch_actions.yml
+++ b/.github/workflows/master_branch_actions.yml
@@ -48,12 +48,12 @@ jobs:
       - name: Run tests
         run: flutter test
       
-      - name: Bump version
-        uses: chkfung/android-version-actions@v1.1
-        with:
-          gradlePath: android/app/build.gradle # or app/build.gradle.kts 
-          versionCode: ${{github.run_number}}
-          versionName: 1.0.0
+      #- name: Bump version
+       # uses: chkfung/android-version-actions@v1.1
+        #with:
+         # gradlePath: android/app/build.gradle # or app/build.gradle.kts 
+          #versionCode: ${{github.run_number}}
+          #versionName: 1.0.0
           
       #Build APK 
       - name: Build APK
