--- a/.github/workflows/master_branch_actions.yml
+++ b/.github/workflows/master_branch_actions.yml
@@ -17,19 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/checkout@v2
+      
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.2.0'
           channel: 'beta'
-      - run: flutter --version
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
         run: flutter pub get
@@ -40,7 +33,7 @@ jobs:
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
-        run: dart analyze
+        run: flutter analyze
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
@@ -57,4 +50,10 @@ jobs:
           
       #Build APK 
       - name: Build APK
-        run: flutter build apk --flavor prod -t lib/main_prod.dart
+        run: flutter build apk
+        
+      # Upload generated apk to the artifacts.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
