--- a/.github/workflows/master_branch_actions.yml
+++ b/.github/workflows/master_branch_actions.yml
@@ -56,7 +56,7 @@ jobs:
           
       #Build APK 
       - name: Build APK
-        run: flutter build apk
+        run: flutter build apk --flavor prod -t lib/main_prod.dart --build-number=${{github.run_number}}
         
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
