--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   crypto: ^3.0.0
   convert: 3.0.1
   xml: ^5.1.2
+  dart_json_mapper: 2.1.17
 
   #Firebase
   firebase_core: ^1.6.0
