--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   xml: ^5.1.2
   dart_json_mapper: 2.1.17
 
+  fluro: ^2.0.3
+  routemaster: ^1.0.0
+
   #Firebase
   firebase_core: ^1.6.0
   firebase_analytics: ^5.0.2
