--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   http: 0.13.3
   provider: ^6.0.0
-  #uuid: 2.1.0
+  uuid: 3.0.6
   permission_handler: ^8.1.4+2
   package_info: ^0.4.0+13
   flutter_spinkit: ^5.1.0
